update image background

--- a/src/assests/styles/component/body.scss
+++ b/src/assests/styles/component/body.scss
@@ -3,16 +3,26 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .body-continer{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    // margin-top: 50px;
+    margin-top: 50px;
 }
 .text-continer{
     width: 485px;
+    margin-right: 100px;
+}
+.image-body-continer{
+    background-color: #5368df;
+  
+    border-radius: 0 0px 0 100px;
+    width: 460px;
+    margin-top: 60px;
+  
 }
 .text-bold{
     font-family: 'BoldFont';
@@ -26,7 +36,11 @@
     color: hsl(229, 8%, 60%);
 }
 .image{
-    max-width: 440px;
+    max-width: 500px;
+    width: 480px;
+    height: 380px;
+    margin-top: -100px;
+    margin-left: -70px;
 
 }
 .btn-chrome{
@@ -139,4 +153,24 @@
     font-size: 30px;
     -webkit-transform: rotateX(180deg);
     transform: rotateX(180deg);
+}
+.image-feature-continer{
+    margin: 0px 20px;
+    background-color: #5368df;
+    border-radius: 0 0px 100px 0px;
+    width: 600px;
+    height: 400px;
+    width: 460px;
+
+}
+
+.image-feature{
+    margin-left: 100px;
+    margin-top: -65px;
+    width: 480px;
+    height: 380px;
+}
+.text-feature-continer{
+    width: 500px;
+    margin-left: 200px;
 }
