--- a/src/assests/styles/component/body.scss
+++ b/src/assests/styles/component/body.scss
@@ -12,6 +12,11 @@
     align-items: center;
     margin-top: 50px;
 }
+
+.btn-container{
+    margin: 25px 0;
+}
+
 .text-continer{
     width: 485px;
     margin-right: 100px;
@@ -93,7 +98,7 @@
     align-items: center;
     margin-top: 50px;
 }
-.extention{
+.extention-chrome{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,6 +108,31 @@
     padding: 15px;
     border-radius: 8px;
     margin: 10px;
+    margin-bottom: 50px;
+}
+.extention-firefox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+    background-color: #ffffff;
+    padding: 15px;
+    border-radius: 8px;
+    margin: 10px;
+    margin-top: 50px;
+}
+.extention-opera{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+    background-color: #ffffff;
+    padding: 15px;
+    border-radius: 8px;
+    margin: 10px;
+    margin-top: 100px;
 }
 
 .extenstion-logo{
@@ -173,4 +203,41 @@
 .text-feature-continer{
     width: 500px;
     margin-left: 200px;
+}
+
+@media only screen and (max-width: 600px) {
+ 
+    .body-continer{
+       flex-direction: column-reverse;
+    }
+    
+    .text-continer{
+        margin-top: 50px;
+        margin-right: 0 !important;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .continer-extenstions{
+        display: flex;
+        flex-direction: column;
+        // justify-content: center;
+        // align-items: center;
+        // margin-top: 50px;
+    }
+    .extention-chrome{
+       
+        margin-bottom: 0;
+    }
+    .extention-firefox{
+       
+        margin-top: 25px;
+    }
+    .extention-opera{
+  
+        margin-top: 25px;
+    }
+   
 }
