--- a/src/assests/styles/component/footer.scss
+++ b/src/assests/styles/component/footer.scss
@@ -106,3 +106,22 @@
     font-weight: 500;
     color: #ffff;
 }
+
+@media only screen and (max-width: 600px) {
+    .sub-footer{
+       flex-direction: column;
+    }
+    .footer-item-content{
+        flex-direction: column;
+    }
+    .footer-item{
+        margin: 20px 20px;
+    }
+    .form-continer{
+        flex-direction: column;
+    }
+    .btn{
+        width: 250px;
+        margin: 10px;
+    }
+}
