--- a/src/assests/styles/component/body.scss
+++ b/src/assests/styles/component/body.scss
@@ -230,14 +230,27 @@
     .extention-chrome{
        
         margin-bottom: 0;
+        padding: 30px;
     }
     .extention-firefox{
        
         margin-top: 25px;
+        padding: 30px;
     }
     .extention-opera{
   
         margin-top: 25px;
+        padding: 30px;
+    }
+    .text-feature-continer{
+        margin: 0 0 150px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .image-feature-continer{
+        margin: 20px 20px;
     }
    
 }
