--- a/src/assests/styles/component/footer.scss
+++ b/src/assests/styles/component/footer.scss
@@ -106,6 +106,14 @@
     font-weight: 500;
     color: #ffff;
 }
+.btn-form{
+    margin: 0 10px;
+    padding: 8px 18px;
+    border-radius: 3px;
+    background-color: hsl(0, 94%, 66%);
+    color: #ffff;
+    font-family: "myfont";
+}
 
 @media only screen and (max-width: 600px) {
     .sub-footer{
@@ -120,7 +128,7 @@
     .form-continer{
         flex-direction: column;
     }
-    .btn{
+    .btn-form{
         width: 250px;
         margin: 10px;
     }
