finish menu for mobile

--- a/src/assests/styles/component/body.scss
+++ b/src/assests/styles/component/body.scss
@@ -195,7 +195,7 @@
     margin: 0px 20px;
     background-color: #5368df;
     border-radius: 0 0px 100px 0px;
-    width: 600px;
+    // width: 600px;
     height: 400px;
     width: 460px;
 
@@ -204,8 +204,8 @@
 .image-feature{
     margin-left: 100px;
     margin-top: -65px;
-    width: 380px;
-    height: 380px;
+    width: 480px;
+    height: 390px;
 }
 .text-feature-continer{
     width: 500px;
