finish menu for mobile

--- a/src/assests/styles/component/header.scss
+++ b/src/assests/styles/component/header.scss
@@ -93,7 +93,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-top: solid 1px #818181;
+    // border-top: solid 1px #818181;
  
   }
   .menu-image{
@@ -130,7 +130,7 @@
     color: #ffff;
     font-family: "myfont";
     font-size: 18px;
-    width: 85%;
+    // width: 85%;
     background-color: inherit;
     border: solid 3px #ffff;
 }
