--- a/src/assests/styles/component/body.scss
+++ b/src/assests/styles/component/body.scss
@@ -46,6 +46,7 @@
     font-size: 18px;
     font-family: 'myFont';
     color: hsl(229, 8%, 60%);
+    width: 80%;
 }
 .image{
     max-width: 500px;
@@ -213,6 +214,9 @@
 }
 
 @media only screen and (max-width: 600px) {
+    p{
+        text-align: center;
+    }
  
     .body-continer{
        flex-direction: column-reverse;
