--- a/src/assests/styles/component/header.scss
+++ b/src/assests/styles/component/header.scss
@@ -76,6 +76,7 @@
     background-color: rgb(0,0,0);
     background-color: rgba(0, 0, 35, 0.89);
     overflow-x: hidden;
+    overflow-y: hidden;
     transition: 0.5s;
     display: flex;
                     // justify-content: center;
@@ -130,7 +131,7 @@
     color: #ffff;
     font-family: "myfont";
     font-size: 18px;
-    // width: 85%;
+    width: 85%;
     background-color: inherit;
     border: solid 3px #ffff;
 }
