--- a/src/assests/styles/component/body.scss
+++ b/src/assests/styles/component/body.scss
@@ -30,10 +30,10 @@
 }
 .image-body-continer{
     background-color: #5368df;
-  
     border-radius: 0 0px 0 100px;
-    width: 460px;
+    width: 450px;
     margin-top: 60px;
+    margin-left: 50px;
   
 }
 .text-bold{
@@ -193,20 +193,18 @@
     transform: rotateX(180deg);
 }
 .image-feature-continer{
-    margin: 0px 20px;
     background-color: #5368df;
     border-radius: 0 0px 100px 0px;
-    // width: 600px;
-    height: 400px;
-    width: 460px;
+    height: 375px;
+    width: 440px;
 
 }
 
 .image-feature{
     margin-left: 100px;
     margin-top: -65px;
-    width: 480px;
-    height: 390px;
+    width: 380px;
+    height: 360px;
 }
 .text-feature-continer{
     width: 500px;
