--- a/src/assests/styles/component/footer.scss
+++ b/src/assests/styles/component/footer.scss
@@ -132,4 +132,17 @@
         width: 250px;
         margin: 10px;
     }
+    .footer-conteiner {
+        margin: 50px 0;
+        background-color: #5368df;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        /* margin-top: 52px; */
+        padding: 20px 0 0px 0;
+        flex-direction: column;
+        margin-bottom: 0;
+    }
 }
